--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Guerrilla&family=Rajdhani:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Potta+One&family=Protest+Guerrilla&family=Rajdhani:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Potta+One&family=Protest+Guerrilla&family=Rajdhani:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Potta+One&family=Protest+Guerrilla&family=Rajdhani:wght@300;400;500;600;700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Potta+One&family=Protest+Guerrilla&family=Rajdhani:wght@300;400;500;600;700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Rajdhani", sans-serif;
+    font-family: "Sour Gummy", sans-serif;
 }
 
 body{
@@ -17,16 +21,15 @@ body{
 }
 
 .container{
-    width: 70%;
-    height: 90%;
-    background: linear-gradient(to top, rgba(4, 160, 177, 0.11), rgba(240, 188, 240, 0.692));
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+    background: linear-gradient(to top, rgb(20, 170, 187), rgb(246, 162, 246));
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    box-shadow: 2px 2px 10px rgb(4, 160, 177), -2px -2px 10px rgb(240, 188, 240);
     border: none;
-    border-radius: 30px;
     padding: 10px;
     box-sizing: border-box;
     gap: 20px;
@@ -34,28 +37,30 @@ body{
 
 h1{
     font-size: 40px;
-    text-shadow: 2px 2px 10px rgb(4, 160, 177);
+    text-shadow: 2px 2px 10px rgb(1, 153, 164);
+    color: #fff;
+    font-family: "Sour Gummy", sans-serif;
 }
 
 .input{
     width: 90%;
-    height: 30%;
-    background: linear-gradient(to right, rgb(3, 19, 22), rgb(160, 161, 235));
+    height: 35%;
+    background: linear-gradient(to right, rgb(1, 117, 95), rgb(160, 161, 235));
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
     color: aliceblue;
     font-size: 25px;
-    border-radius: 20px;
+    border-radius: 8px;
 }
 
 #input{
     width: 70%;
-    height: 40px;
+    height: 45px;
     background-color: rgba(10, 46, 49, 0.68);
     border: none;
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: 2px 2px 10px rgb(4, 160, 177), -2px -2px 10px rgb(240, 188, 240);
     font-size: 20px;
     color: aliceblue;
@@ -64,12 +69,12 @@ h1{
 }
 
 #btn{
-    width: 200px;
-    height: 50px;
+    width: 250px;
+    height: 52px;
     background-color: rgba(10, 46, 49, 0.68);
     border: none;
-    border-radius: 20px;
-    font-size: 20px;
+    border-radius: 80px;
+    font-size: 22px;
     color: aliceblue;
     cursor: pointer;
     box-shadow: 2px 2px 10px rgb(4, 160, 177);
@@ -95,24 +100,24 @@ h1{
 .image{
     width: 70%;
     height: 100%;
-    background: linear-gradient(to right, rgb(3, 19, 22), rgb(160, 161, 235));
+    background: linear-gradient(to right, rgb(0, 117, 137), rgb(219, 160, 235));
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
-    border-radius: 20px;
+    border-radius: 8px;
     position: relative;
 }
 
 .btns{
     width: 25%;
     height: 100%;
-    background: linear-gradient(to right, rgb(3, 19, 22), rgb(160, 161, 235));
+    background: linear-gradient(to right, rgb(19, 187, 156), rgb(160, 161, 235));
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
-    border-radius: 20px;
+    border-radius: 8px;
     flex-direction: column;
     gap: 90px;
 }
@@ -122,7 +127,7 @@ h1{
     height: 50px;
     background-color: rgba(10, 46, 49, 0.68);
     border: none;
-    border-radius: 20px;
+    border-radius: 80px;
     font-size: 20px;
     color: aliceblue;
     cursor: pointer;
@@ -143,7 +148,7 @@ h1{
     height: 50px;
     background-color: rgba(10, 46, 49, 0.68);
     border: none;
-    border-radius: 20px;
+    border-radius: 80px;
     font-size: 20px;
     color: aliceblue;
     cursor: pointer;
@@ -164,8 +169,9 @@ h1{
     height: 90%;
     background-size: cover;
     border: none;
-    border-radius: 20px;
+    border-radius: 8px;
     display: none;
+    filter: drop-shadow(2px 2px 10px rgb(4, 101, 118));
 }
 
 #loading{
@@ -178,10 +184,20 @@ h1{
 
 /* responsiveness code down side  */
 
-@media only screen and (max-width: 1200px){
-    .container{
-        width: 90%;
+@media only screen and (max-width: 1536px){
+    .input label{
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
+    #input{
+        margin-bottom: 1%;
+    }
+    #btn{
+        margin-bottom: 1%;
+    }
+}
+
+@media only screen and (max-width: 1200px){
     #image{
         width: 75%;
     }
@@ -199,9 +215,13 @@ h1{
         height: 64%;
     }
     .btns{
+        margin-top: 1%;
         width: 100%;
-        height: 25%;
+        height: 30%;
         flex-direction: row;
+    }
+    .output{
+        flex-wrap: wrap;
     }
 }
 
@@ -222,11 +242,6 @@ h1{
 }
 
 @media only screen and (max-width: 450px){
-    .container{
-        width: 100%;
-        height: 100%;
-        border-radius: 0px;
-    }
     h1{
         font-size: 22px;
     }
